Continued work on Tesco Insurance CSS

--- a/insurance-tescomobil.html
+++ b/insurance-tescomobil.html
@@ -9,40 +9,53 @@
 <body>
     <nav>
         <a href="https://insurance.tescomobile.com/account/sign-in">
-            <img src="tesco-logo.svg" alt="Tesco Logo"/>
+            <img src="assets/tesco-logo.svg" alt="Tesco Logo"/>
         </a>
         <a id="my-account" href="https://insurance.tescomobile.com/account/sign-in">My account</a>
     </nav>
     <header>
-        <img id="umbrella-logo" src="tesco-product-logo.c9477e37.svg" alt="protect logo under an umbrella"/>
-        <h1>
-            Start, manage or track<br>your Tesco Mobile<br>Protect claim
-        </h1>
-        <h1 id="red-period">.</h1>
-        <a id="get-started-button" href="https://claims.tescomobile.com/tesco/en-gb/workflow/start#!" class="button">Get started</a>
-        <img id="cracked-phone" src="cracked-screen.png" alt="cracked phone screen"/>
+        <div id="header-left">
+            <img id="cracked-phone" src="assets/cracked-screen.png" alt="cracked phone screen"/>
+        </div>
+        <div id="header-right">
+            <img id="umbrella-logo" src="assets/tesco-product-logo.c9477e37.svg" alt="protect logo under an umbrella"/>
+            <h1>
+                Start, manage or track your Tesco Mobile Protect claim<span id="red-period">.</span>
+                <a id="get-started-button" href="https://claims.tescomobile.com/tesco/en-gb/workflow/start#!">Get started</a>
+            </h1>
+        </div>
     </header>
     <main>
-        <h2>
-            Need to upload<br>claim documents?
-        </h2>
-        <p>
-            If we've requested documentation for your<br>claim, you can upload it here.
-        </p>
-        <a id="upload-button" href="https://claims.tescomobile.com/tesco/en-gb/claims/resume-login#!" class="button-2">Upload Claim Documents</a>
+        <div id="main-left">
+            <!-- Empty Div !-->
+        </div>
+        <div id="main-right">
+            <h2>
+                Need to upload<br>claim documents?
+            </h2>
+            <p>
+                If we've requested documentation for your<br>claim, you can upload it here.
+            </p>
+            <a id="upload-button" href="https://claims.tescomobile.com/tesco/en-gb/claims/resume-login#!" >Upload Claim Documents</a>
+        </div>
+
     </main>
     <footer>
-        <img src="tesco-logo.svg" alt="tesco logo"/>
-        <a href="https://insurance.tescomobile.com/account/sign-in">Manage Account</a>
-        <p>|</p>
-        <a href="https://www.tescomobile.com/about-us/terms-and-conditions" target="_blank">Terms & Conditions</a>
-        <p>|</p>
-        <a href="https://europe.asurion.com/pdf/TermsOfUse.pdf" target="_blank">Terms of Use</a>
-        <p>|</p>
-        <a href="https://europe.asurion.com/pdf/PrivacyPolicy.pdf" target="_blank">Privacy Policy</a>
-        <p>|</p>
-        <a href="https://www.tescomobile.com/contact-us/pay-monthly" target="_blank">Contact Us</a>
-        <p>|</p>
+        <div id="footer-top">
+            <img src="assets/tesco-logo.svg" alt="tesco logo"/>
+        </div>
+        <div id="footer-bottom">
+            <a href="https://insurance.tescomobile.com/account/sign-in">Manage Account</a>
+            <span class="footer-link-spacer">|</span>
+            <a href="https://www.tescomobile.com/about-us/terms-and-conditions" target="_blank">Terms & Conditions</a>
+            <span class="footer-link-spacer">|</span>
+            <a href="https://europe.asurion.com/pdf/TermsOfUse.pdf" target="_blank">Terms of Use</a>
+            <span class="footer-link-spacer">|</span>
+            <a href="https://europe.asurion.com/pdf/PrivacyPolicy.pdf" target="_blank">Privacy Policy</a>
+            <span class="footer-link-spacer">|</span>
+            <a href="https://www.tescomobile.com/contact-us/pay-monthly" target="_blank">Contact Us</a>
+            <span class="footer-link-spacer">|</span>
+        </div>
     </footer>
 </body>
 </html>
